--- a/include/orion-utils/CMakeLists.txt
+++ b/include/orion-utils/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(
         orion-utils PUBLIC
         FILE_SET public_headers
         FILES
+        allocators/linear_allocator.h
         assertion.h
         enum.h
         static_vector.h
