--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ function(add_orion_utils_test name)
     gtest_discover_tests(${name})
 endfunction()
 
+add_orion_utils_test(bitflag)
 add_orion_utils_test(static_vector)
 add_orion_utils_test(type)
 add_orion_utils_test(uninitialized)
