--- a/include/orion-utils/CMakeLists.txt
+++ b/include/orion-utils/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(
         FILE_SET public_headers
         FILES
         assertion.h
+        bitflag.h
         static_vector.h
         type.h
         uninitialized.h
